--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -1,6 +1,15 @@
 p {
-            font-family: 'Carlito', sans-serif;
-            font-size: 20px;
+    font-family: 'Carlito', sans-serif;
+}
+p.basic-text {
+    font-size: 20px;
+}
+p.project-desc {
+    font-size: 18px;
+}
+p.project-date {
+    font-size: 14px;
+    color: #808080;
 }
 .btn-outline-discord {
     --btn-color: #5865F2;
@@ -34,4 +43,13 @@ p {
     color: #fff;
     background-color: var(--btn-color);
     border-color: var(--btn-color);
+}
+.project-link {
+    color: #fff;
+    text-decoration: underline;
+    text-decoration-color: #fff;
+    text-decoration-thickness: 2px;
+}
+.bg-footer {
+    background-color: #2F3136;
 }
