--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Custom Embed -->
+    <meta content="{{ page.title }}" property="og:title">
+    <meta content="{{ page.description }}" property="og:description">
+    <meta content="{{ page.url }}" property="og:url">
+    <meta content="{% static 'main/images/profile.jpg' %}" property="og:image">
+    <meta content="#9711ff" data-react-helmet="true" name="theme-color">
     <title>rayun.dev</title>
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Carlito">
@@ -12,9 +18,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!--jQuery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <!-- HTMX -->
     <script src="https://unpkg.com/htmx.org@1.9.4"></script>
     <!-- Custom CSS -->
@@ -33,10 +36,13 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'main:index' %}">Home</a>
+                            <a class="nav-link {% block nav_index %}{% endblock %}" href="{% url 'main:index' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'main:reserved' %}">More</a>
+                            <a class="nav-link {% block nav_projects %}{% endblock %}" href="{% url 'main:projects' %}">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% block nav_reserved %}{% endblock %}" href="{% url 'main:reserved' %}">More</a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +51,7 @@
         {% block content %}
         {% endblock %}
     </div>
-    <footer class="text-center bg-dark text-white p-3 fixed-bottom">
+    <footer class="text-center bg-footer text-white p-3 fixed-bottom">
         <div class="container">
             <div class="row">
                 <div class="col">
