--- a/main/templates/main/reserved.html
+++ b/main/templates/main/reserved.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block nav_reserved %}active{% endblock %}
 
 {% block content %}
     <p>Nothing yet :P<br>More to come!</p>
