--- a/main/templates/main/projects.html
+++ b/main/templates/main/projects.html
@@ -18,7 +18,7 @@
                     <div class="col-sm-5">
                         <h2>{{ project.title }}</h2>
                         <p class="project-date">{{ project.date }}</p>
-                        <p class="project-desc">{% lorem 50 w %}</p>
+                        <p class="project-desc">{{ project.description }}</p>
                         <div class="row mt-8">
                             <div class="col-sm-12">
                                 {% if project.gh_link %}
