--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -42,6 +42,9 @@
                             <a class="nav-link {% block nav_projects %}{% endblock %}" href="{% url 'main:projects' %}">Projects</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link {% block nav_crudtober %}{% endblock %}" href="{% url 'main:crudtober' %}">crudtober</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% block nav_reserved %}{% endblock %}" href="{% url 'main:reserved' %}">More</a>
                         </li>
                     </ul>
