Some crudtober changes

--- a/main/templates/main/crudtober.html
+++ b/main/templates/main/crudtober.html
@@ -18,10 +18,17 @@
                     out for yourself ^-^)
                 </p>
                 <hr>
+                <h2 class="mt-2">Sister Sites</h2>
+                <p>Check out the other crudtobers goin on!</p>
+                <div class="alert alert-info">
+                    <a class="link-light" href="https://korio.me/crudtober" target="_blank">koriome</a> <a class="link-light" href="https://www.squareisnot.cool/crudtober/2023" target="_blank">Square</a>
+                </div>
+                <hr>
             </div>
         </div>
         <div class="row justify-content-left">
-            <div class="accordion" id="dayaccordion">
+            <h2 class="mt-2">Log</h2>
+            <div class="accordion mt-2" id="dayaccordion">
                 {% for crud_day in crud %}
                     <div class="accordion-item">
                         <h2 class="accordion-header">
