--- a/main/templates/main/projects.html
+++ b/main/templates/main/projects.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container text-center">
         <div class="row justify-content-sm-center mt-2">
             <div class="col-sm-auto">
                 <h1>Projects</h1>
