--- a/main/templates/main/reserved.html
+++ b/main/templates/main/reserved.html
@@ -2,5 +2,7 @@
 {% block nav_reserved %}active{% endblock %}
 
 {% block content %}
-    <p>Nothing yet :P<br>More to come!</p>
+    <div class="container text-center">
+        <p>Nothing yet :P<br>More to come!</p>
+    </div>
 {% endblock %}
