--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -26,7 +26,7 @@
     {% endblock %}
 </head>
 <body class="bg-dark">
-    <div class="text-white text-center p-3">
+    <div class="text-white p-3">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'main:index' %}">rayun.dev</a>
@@ -40,9 +40,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% block nav_projects %}{% endblock %}" href="{% url 'main:projects' %}">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% block nav_crudtober %}{% endblock %}" href="{% url 'main:crudtober' %}">crudtober</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% block nav_reserved %}{% endblock %}" href="{% url 'main:reserved' %}">More</a>
