--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -13,7 +13,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="row justify-content-sm-center mt-2">
+        <div class="row justify-content-sm-center mt-2 text-center">
             <div class="col-sm-auto">
                 <h1>{{ greeting }}</h1>
                 <img class="rounded-circle img-fluid" alt="profile picture" src="{% static 'main/images/profile.jpg' %}">
@@ -21,7 +21,7 @@
                 <p class="basic-text">I'm Rayun. I make stuff occasionally.</p>
             </div>
         </div>
-        <div class="row justify-content-center align-items-center mt-4">
+        <div class="row justify-content-center align-items-center mt-4 text-center">
             <div class="col-sm-3 justify-content-sm-right">
                 <h2><span class="text-decoration-line-through">Anti</span>Socials</h2>
                 <p class="basic-text">You can find me around</p>
@@ -47,6 +47,16 @@
                         <i class="bi-twitter"></i> Not X
                     </button>
                 </a>
+            </div>
+        </div>
+        <!-- Lanyard -->
+        <div class="row justify-content-sm-center mt-4">
+            <div class="col-sm-auto">
+                <div id="lanyard"
+                     hx-post="{% url 'main:lanyard' %}"
+                     hx-trigger="load"
+                     hx-swap="outerHTML">
+                </div>
             </div>
         </div>
     </div>
